Bug 600570 - textarea: cut and paste broken, pastes more than cut, leaves selectionEnd with wrong value; r=bzbarsky a=blocking-betaN+