editor/libeditor/text/nsTextEditRules.cpp
@@ -795,15 +795,6 @@ nsTextEditRules::WillInsertText(PRInt32          aAction,
       nsCOMPtr<nsISelectionPrivate>selPrivate(do_QueryInterface(aSelection));
       selPrivate->SetInterlinePosition(endsWithLF);
 
-      // If the last character is a linefeed character, make sure that we inject
-      // a BR element for correct caret positioning.
-      if (endsWithLF) {
-        nsCOMPtr<nsIDOMNode> mozBR;
-        res = CreateMozBR(curNode, curOffset, address_of(mozBR));
-        NS_ENSURE_SUCCESS(res, res);
-        curNode = mozBR;
-        curOffset = 0;
-      }
       aSelection->Collapse(curNode, curOffset);
     }
   }
